[package]
authors = ["Anonymous"]
description = "Runtime Common"
edition = "2021"
license = "Unlicense"
name = "runtime-common"
repository = "https://github.com/paritytech/extended-parachain-template"
version = "1.0.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]


[dependencies]
codec = {package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"]}
scale-info = {version = "2.5.0", default-features = false, features = ["derive"]}

# Substrate
frame-support = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v1.0.0"}
sp-runtime = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v1.0.0"}
sp-std = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v1.0.0"}

parachains-common = {git = "https://github.com/paritytech/cumulus", branch = "polkadot-v1.0.0", default-features = false}
polkadot-primitives = {git = "https://github.com/paritytech/polkadot", branch = "release-v1.0.0", default-features = false}

[features]
default = [
  "std",
]
std = [
  "frame-support/std",
  "sp-runtime/std",
]

runtime-benchmarks = [
  "frame-support/runtime-benchmarks",
  "sp-runtime/runtime-benchmarks",
]
