[package]
name = "moonbeam-rpc-core-debug"
authors = [ "PureStake" ]
edition = "2021"
homepage = "https://moonbeam.network"
license = "GPL-3.0-only"
repository = "https://github.com/PureStake/moonbeam/"
version = "0.1.0"

[dependencies]
futures = { version = "0.3", features = [ "compat" ] }
jsonrpsee = { version = "0.15.0", features = ["server", "macros"] }
moonbeam-client-evm-tracing = { path = "../.." }
moonbeam-rpc-core-types = { path = "../types" }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"

ethereum-types = { version = "0.13.1" }
