[package]
name = "moonbeam-rpc-core-txpool"
authors = [ "PureStake" ]
edition = "2021"
homepage = "https://moonbeam.network"
license = "GPL-3.0-only"
repository = "https://github.com/PureStake/moonbeam/"
version = "0.6.0"

[dependencies]
ethereum = { version = "0.12.0", default-features = false, features = [ "with-codec" ] }
jsonrpsee = { version = "0.15.0", features = ["server", "macros"] }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"

ethereum-types = { version = "0.13.1" }

fc-rpc-core = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.37" }
