[package]
name = "moonbeam-rpc-debug"
authors = [ "PureStake" ]
edition = "2021"
homepage = "https://moonbeam.network"
license = "GPL-3.0-only"
repository = "https://github.com/PureStake/moonbeam/"
version = "0.1.0"

[dependencies]
futures = { version = "0.3", features = [ "compat" ] }
hex-literal = "0.3.4"
jsonrpsee = { version = "0.15.0", default-features = false, features = [ "macros", "server" ] }
tokio = { version = "1.10", features = [ "sync", "time" ] }

# Moonbeam
moonbeam-client-evm-tracing = { path = "../.." }
moonbeam-rpc-core-debug = { path = "../../rpc-core/debug" }
moonbeam-rpc-core-types = { path = "../../rpc-core/types" }
moonbeam-rpc-primitives-debug = { path = "../../primitives/rpc/debug" }

# Substrate
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sc-utils = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }

# Frontier
fc-consensus = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.30" }
fc-db = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.30" }
fc-rpc = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.30" }
fp-rpc = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.30" }

ethereum = { version = "0.12.0", default-features = false, features = [ "with-codec" ] }
ethereum-types = { version = "0.13.1" }
