[package]
name = "moonbeam-rpc-txpool"
authors = [ "PureStake" ]
edition = "2021"
homepage = "https://moonbeam.network"
license = "GPL-3.0-only"
repository = "https://github.com/PureStake/moonbeam/"
version = "0.6.0"

[dependencies]
jsonrpsee = { version = "0.15.0", default-features = false, features = [ "macros", "server" ] }
rlp = "0.5"
serde = { version = "1.0", features = [ "derive" ] }
sha3 = "0.10"

# Moonbeam
moonbeam-rpc-core-txpool = { path = "../../rpc-core/txpool" }
moonbeam-rpc-primitives-txpool = { path = "../../primitives/rpc/txpool" }

# Substrate
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }

# Frontier
ethereum-types = { version = "0.13.1" }
fc-rpc = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.30" }
