[package]
name = "moonbeam-rpc-primitives-debug"
authors = [ "PureStake" ]
edition = "2021"
homepage = "https://moonbeam.network"
license = "GPL-3.0-only"
repository = "https://github.com/PureStake/moonbeam/"
version = "0.1.0"

[dependencies]
environmental = { version = "1.1.2", default-features = false }
ethereum = { version = "0.12.0", default-features = false, features = [ "with-codec" ] }
ethereum-types = { version = "0.13.1", default-features = false }
hex = { version = "0.4", optional = true, features = [ "serde" ] }
serde = { version = "1.0", optional = true, features = [ "derive" ] }
serde_json = { version = "1.0", optional = true }

# Substrate
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
sp-api = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.30" }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.30" }
sp-io = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.30" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.30" }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.30" }

[features]
default = [ "std" ]
std = [
	"codec/std",
	"environmental/std",
	"ethereum-types/std",
	"ethereum/std",
	"hex",
	"serde",
	"serde_json",
	"sp-api/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
]
